--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php"
+        ],
+        "files": [
+          "tests/helpers/functions.php"
         ]
     },
     "scripts": {
